<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layout_reset_password_email__rl_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layout_reset_password_email__mc_email"
            android:layout_width="@dimen/auth_et_width"
            android:layout_height="@dimen/auth_et_height"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/auth_mc_corner_radius"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/layout_reset_password_email__et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:hint="@string/email"
                android:paddingHorizontal="@dimen/auth_et_padding_horizontal"
                android:textColorHint="@color/text_secondary" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layout_reset_password_email__mc_code"
            android:layout_width="@dimen/auth_et_width"
            android:layout_height="@dimen/auth_et_height"
            android:layout_below="@id/layout_reset_password_email__mc_email"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/auth_mc_corner_radius"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/layout_reset_password_email__et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="textNoSuggestions"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:hint="@string/enter_code"
                android:paddingHorizontal="@dimen/auth_et_padding_horizontal"
                android:textColorHint="@color/text_secondary" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/layout_reset_password_email__tv_new_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_reset_password_email__mc_code"
            android:layout_alignEnd="@id/layout_reset_password_email__mc_code"
            android:layout_marginTop="8dp"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            tools:text="Отправить код повторно (50)" />
    </RelativeLayout>

</merge>